package com.upb.agripos;

public interface PaymentMethod {
    void processPayment(double amount);
}